0x0B-malloc_free/1-main.c:
n.c:17:9: error: implicit declaration of function ‘printf’ [-Werror=implicit-function-declaration]
   17 |         printf("failed to allocate memory\n");
      |         ^~~~~~
